@@ -1,5 +1,10 @@
 2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
+	* lib/iphlpapi/iphlpapi.c: Add @implemented and @unimplemented
+	to APIs.
+
+2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
 	* lib/gdi32/main/dllmain.c: Add @implemented and @unimplemented
 	to APIs.
 	* lib/gdi32/misc/stubs.c: Ditto.
